<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:background="@color/colorEscalaGrisesGrisFondo"
    tools:context="com.personal.frbk1992.spamsmsdetector.sms.SMSDetailFragment">


    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin">

            <android.support.v7.widget.CardView
                android:id="@+id/card_view"
                android:background="@color/colorWhite"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:id="@+id/layout_superior"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingTop="10dp"
                    android:paddingBottom="10dp"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp"
                    android:orientation="vertical">

                    <TextView
                        android:paddingTop="16dp"
                        android:paddingBottom="16dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="16sp"
                        android:visibility="gone"
                        android:textColor="@color/colorWarning"
                        android:id="@+id/fragment_sms_indicator_spam_phishing" />


                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="20sp"
                        android:textStyle="bold"
                        android:id="@+id/fragment_sms_title" />

                    <TextView
                        android:paddingTop="16dp"
                        android:paddingBottom="16dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="16sp"
                        android:id="@+id/fragment_sms_content" />


                </LinearLayout>

            </android.support.v7.widget.CardView>



        </LinearLayout>

        <android.support.design.widget.FloatingActionButton

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|end"
            android:layout_margin="@dimen/floating_button_padding"
            android:visibility="gone"
            android:id="@+id/fragment_sms_floating_button_test_phishing_url"
            android:src="@mipmap/ic_hook"/>

    </FrameLayout>



</ScrollView>
