<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
tools:context="com.personal.frbk1992.spamsmsdetector.main.SMSListFragment">

    <ListView
        android:id="@android:id/list"
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        tools:listitem="@layout/content_note">
    </ListView>

</FrameLayout>
