...
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>


    <!--Menu show in the list fragment-->
    <string name="fragment_list_menu_try_spam_sms_string">Get spam SMS</string>
    <string name="fragment_list_menu_information_app">Information</string>

    <!--Menu show in the spam sms list fragment-->
    <string name="fragment_list_menu_delete_spam_sms_string">Delete all my Spam SMS</string>

    <!--Menu show in the spam sms detail when the sms has an url fragment-->
...
